# mxml

./: .gitignore  CMakeLists.txt  LICENSE  README.md  changelog
.github/workflows/: build-documentation.yml  cmake-multi-platform.yml
cmake/: mxml-config.cmake.in
docs/: CMakeLists.txt  Doxyfile.in  conf.py  conf.py.in  index.rst  requirements.txt
examples/: CMakeLists.txt  clavichord-example.cpp  clavichord-stringing.dtd  clavichord-v2.xml  middentoon.xml  mxml-serialize.cpp  mxml-synopsis.cpp  mxml-xpath-sample.cpp  serialize-xml.cpp  synopsis-xml.cpp  test.xml  validating-xml-sample.cpp  werckmeister.xml  xpath-sample.cpp
include/: mxml.hpp
include/mxml/: doctype.hpp  document.hpp  error.hpp  node.hpp  parser.hpp  serialize.hpp  text.hpp  version.hpp  xpath.hpp
modules/: doctype.ixx  document.ixx  error.ixx  mxml.ixx  node.ixx  parser.ixx  text.ixx  xpath.ixx
modules/mxml/: doctype.ixx  document.ixx  error.ixx  node.ixx  parser.ixx  serialize.ixx  text.ixx  version.ixx  xpath.ixx
src/: doctype.cpp  doctype.cxx  document.cpp  document.cxx  html-named-characters.cpp  html-named-characters.cxx  node.cpp  node.cxx  parser.cpp  parser.cxx  text.cpp  text.cxx  xpath.cpp  xpath.cxx
test/: CMakeLists.txt  parser-test.cpp  serializer-test.cpp  unit-test-1.cpp  unit-test.cpp  xpath-test.cpp
test/XPath-Test-Suite/: xpath-tests.xml
